# go2-edu

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  start-novnc.sh
go2_humble/: requirements.txt
go2_humble/go2_robot_sdk/: package.xml  setup.py
go2_humble/go2_robot_sdk/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params.yaml.bak
go2_humble/go2_robot_sdk/go2_robot_sdk/: go2_status_bridge.py  robot_driver_node.py
go2_humble/go2_robot_sdk/go2_robot_sdk/infrastructure/: __init__.py
go2_humble/go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: __init__.py  joint_states_publisher.py  odom_tf_publisher.py
go2_humble/go2_robot_sdk/launch/: navigation.launch.py  robot.launch.py  robot_mapping.launch.py  scan.launch.py
go2_humble/go2_robot_sdk/urdf/: go2.urdf
go2_humble/lidar_processor_cpp/: CMakeLists.txt  package.xml
go2_humble/lidar_processor_cpp/src/: lidar_to_pointcloud_node.cpp  pointcloude_aggregator_node.cpp
go2_humble/unitree_ros2_example/: CMakeLists.txt
go2_humble/unitree_ros2_example/src/go2/: go2_robot_state_client.cpp  go2_sport_client.cpp
workspace/: .gitignore  main.py  requirements.txt
workspace/agent-stella/: sound_test.py
workspace/agent-stella/agent/agents/: schedule_agent.py
workspace/agent-stella/agent/tools/: stt.py
workspace/agent-stella/object_detection/: yolo_finetune.py
workspace/agent-stella/vlm/: __init__.py  config.py  main.py
workspace/agent-stella/vlm/providers/: base.py  openai_compatible.py
workspace/agent-stella/vlm/selection/: __init__.py  selector.py
workspace/agent-stella/vlm/storage/: interaction_logger.py  run_dir.py  video_writer.py
workspace/agent/agents/: vision_agent.py  weather_agent.py
workspace/agent/services/: agent_runner.py  vision_runner.py
workspace/agent/tools/: logger.py  schedule_api.py  speech_generation.py  stt.py  tts.py  video_processor.py  vision_api.py  weather_api.py
workspace/config/: default.yaml
workspace/object_detection/: emergency_10.yaml  yolo_depth.py
workspace/previous_code/: .gitignore  README.md  camera_test.py  test.py  yolo_test_82.py
workspace/vlm/: session.py
workspace/vlm/camera/: __init__.py  depthai_stream.py  test_camera_view.py
workspace/vlm/navigation/: __init__.py  depth_features.py  guidance_loop.py  labeler.py  mode.py  shared_state.py  utterances.py
workspace/vlm/providers/: __init__.py  base.py  openai_compatible.py
workspace/vlm/selection/: keyframe_detector.py  ring_buffer.py
workspace/vlm/storage/: __init__.py  interaction_logger.py  video_writer.py
